After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783047 - Many apps crash in gdk_event_source_prepare when logging out of GNOME
Many apps crash in gdk_event_source_prepare when logging out of GNOME
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Wayland
3.22.x
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
: 783604 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2017-05-24 13:55 UTC by Debarshi Ray
Modified: 2017-08-16 15:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
wayland: Don't abort when preparing the source if connection is lost (1.22 KB, patch)
2017-05-24 14:09 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2017-05-24 13:55:34 UTC
See this Fedora bug for the backtraces:
https://bugzilla.redhat.com/show_bug.cgi?id=1258818

It looks very similar to this older Fedora bug, except that it one is about gdk_event_source_check and the other gdk_event_source_prepare:
https://bugzilla.redhat.com/show_bug.cgi?id=1366897

It was fixed by:
https://git.gnome.org/browse/gtk+/commit/?h=gtk-3-22&id=43b2b107f123a97e2040ddb7f429b611a16bdc41

I don't know if this is also triggered by logging out of GNOME, but it looks plausible, so I am running with it.
Comment 1 Debarshi Ray 2017-05-24 14:09:03 UTC
Created attachment 352502 [details] [review]
wayland: Don't abort when preparing the source if connection is lost
Comment 2 Debarshi Ray 2017-05-24 14:10:42 UTC
Bug 745289 was another related issue fixed by:
https://git.gnome.org/browse/gtk+/commit/?h=gtk-3-22&id=53028ff3bb0610f5fb4df360391af9ee23f61cfa
Comment 3 Olivier Fourdan 2017-05-24 14:12:05 UTC
You have indentation issues in the patch (the { }), other than that, I think it makes sense.
Comment 4 Olivier Fourdan 2017-05-24 14:12:47 UTC
(In reply to Olivier Fourdan from comment #3)
> You have indentation issues in the patch (the { }), other than that, I think
> it makes sense.

Ah no, sorry, my bad, indentation is fine!
Comment 5 Matthias Clasen 2017-05-24 16:33:35 UTC
Review of attachment 352502 [details] [review]:

makes sense. please put it on gtk-3-22 and master
Comment 6 Debarshi Ray 2017-05-25 09:53:31 UTC
Comment on attachment 352502 [details] [review]
wayland: Don't abort when preparing the source if connection is lost

Thanks for the reviews. Pushed to master and gtk-3-22.
Comment 7 Debarshi Ray 2017-08-16 15:54:04 UTC
*** Bug 783604 has been marked as a duplicate of this bug. ***